Created attachment 42591 [details] Minimal presentation to reproduce the bug. Area transparency does not work properly in presentation mode. Simplest way to reproduce (see also attachment): 1. Create a rectangle on top of some text 2. Fill color: white 3. Choose transparency 50%. Rectangle is correctly displayed (Normal view). 4. Switch into presentation mode: The rectangle appears in transparent gray, not transparent white (if you choose a different fill color, light red for instance, the transparency also seems to translate into a gray shaded red). 5. There is a way around the problem: Choose a linear transparency gradient with start value 50% and end value 50%. Funnily, the rectangle is fully transparent in Normal view, but appears 50% transparent (white) in presentation mode.
Created attachment 44251 [details] additional minimal test case I'm also seeing this. The color rendering of transparent gradients is completely different in editing mode than in presentation view.
I'm having this problem as well. It applies both to transparencies in the main document and those in the master pages.
I get the same problem and it is a big issue for people using LO for presentations. I would hope this can be given a higher priority because transparency is an important aspect of making good presentations. I am happy to help testing.
[Reproducible] with "additional minimal test case" and "LibreOffice 3.4Beta3 – WIN7 Home Premium (64bit) German UI [DEV300m103 (Build:3)]". In presentation mode there is an additional grey in the transparnet colors green and brown. Related to "Bug 36470 - Transparency rendering grey instead of white in presentation mode"?
*** Bug 36470 has been marked as a duplicate of this bug. ***
I have fixed this problem in master branch and sent for review to include in 3-4 branch as well.
I suggest to reopen this bug: see my attachment and comment in bug 36766 !
I still see the problem with Master "LibO-dev 3.4.5 – WIN7 Home Premium (64bit) English UI, but I think code base of that version (master~2011-07-11_09.48.50_LibO-Dev_OOO350m1_Win_x86_install_en-US.exe) can't contain the fix. [(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43 2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb 6a9633a-931d089-ecd263f-c9b55e9-b31b807 82ff335-599f7e9-bc6a545-1926fdf)]" @Radek: Can you please contribute target or GIT information? @Raphaël What information do you have that the fix has been integrated into code for 3.4.2? Please do not modify pickers if you are not sure concerning interrelations and consequences. I will close this bug again without new information.
(In reply to comment #8) > I still see the problem with Master "LibO-dev 3.4.5 – WIN7 Home Premium > (64bit) English UI, but I think code base of that version > (master~2011-07-11_09.48.50_LibO-Dev_OOO350m1_Win_x86_install_en-US.exe) can't > contain the fix. > [(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43 > 2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb > 6a9633a-931d089-ecd263f-c9b55e9-b31b807 > 82ff335-599f7e9-bc6a545-1926fdf)]" > > > @Radek: > Can you please contribute target or GIT information? > > @Raphaël > What information do you have that the fix has been integrated into code for > 3.4.2? Please do not modify pickers if you are not sure concerning > interrelations and consequences. > > I will close this bug again without new information. My information about the integration of the fix patch in version 3.4.2 was the fact that something changed from 3.4.1: the issue as described in comment 0 seems to be fixed now. But the problem isn't: in the file attached in comment 5 bug 36766, you can see that, for instance, black areas with transparency gradient on black background turn gray in presentation mode ! So, if the problem seems to be solved for 'simple' transparency areas, it is not the case for 'gradient' transparency areas, so I think it is better to re-open this bug than to open a new one called 'Area with gradient transparency turns gray in presentation mode'... Issue clearly connected with bug 35681.
*** Bug 39905 has been marked as a duplicate of this bug. ***
@Raphaël: (In reply to comment #9) The only interesting fact would be that you show that in build where the fix is integrated still shows the problem (also from Bug 39905) "grey instead of transparent". This info still is missing, so I close this bug again. Please feel free to reopen the Bug if you can contribute a build name with integrated fix that still shows the "additional grey" problem. BTW, the effect from Report step 5 es something completely different, DUP of "Bug 39924 - VIEWING shapes with transparent color gradient filling wrong for equal start and end value"
@Radek: For me the problem is visible with "additional minimal test case" and also with both samples from "Bug 36547 - Impress: Rendering problems with some .odp files" <https://bugs.freedesktop.org/show_bug.cgi?id=36547> using "LibreOffice 3.5.1.1 German UI/Locale [Build-ID: 45a2874-aa8c38d-dff3b9c-def3dbd-62463c8] on German WIN7 Home Premium (64bit) and with "LibreOffice 3.4.5 German UI [Build ID: OOO340m1 (Build:502)]" parallel Server installation on German WIN7 Home Premium (64bit) I reopen this bug because I can't find any version in the past for what the "transparency turns gray" problem has been solved and git information still is missing. @Radek: May I remind you to my 8? Can you please check?
*** Bug 36547 has been marked as a duplicate of this bug. ***
Much of this is fixed with bug 45219 (a slew of transparency issues, shown by the bugdoc there). I retain the problem from "Minimal presentation to reproduce", that the 50-50 transparency gradient is different under slideshow mode.
Fixed in master. In fact, slideshow is right, edit view was wrong here.
Thorsten Behrens committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=983c27402e151126c5bef6623eeb07f333456243 Fix fdo#33591 - edge-case trans gradients came out empty
Thorsten Behrens committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=513ae531ccd3080fa1089d2d9d7dc829e96267cf&g=libreoffice-3-5 Fix fdo#33591 - edge-case trans gradients came out empty It will be available in LibreOffice 3.5.3.
*** Bug 39924 has been marked as a duplicate of this bug. ***