Fix fdo#33591 - edge-case trans gradients came out empty

Gradients with start==end got us zero steps, thus no fill at all.
Funnily this was wrong since pre-3.0 or somesuch.

Signed-off-by: Petr Mladek <pmladek@suse.cz>